backend/payment/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service-v2
  namespace: travelnote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-service
      version: v2
  template:
    metadata:
      labels:
        app: trip-service
        version: v2
    spec:
      containers:
      - name: trip-service
        image: minwoooo3396/travelnote-trip:v2
        ports:
        - containerPort: 8082
