backend/payment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service
  namespace: travelnote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-service
  template:
    metadata:
      labels:
        app: trip-service
    spec:
      containers:
      - name: trip-service
        image: minwoooo3396/travelnote-trip:v1 # ✅ Docker Hub 이미지로 변경
        ports:
        - containerPort: 8082
