backend/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-service
  namespace: travelnote
spec:
  selector:
    app: trip-service
  ports:
  - port: 8082
    targetPort: 8082
